force-app/main/default/objects/Campaign/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <label>Campaign Code</label>
    <type>AutoNumber</type>
</CustomField>