force-app/main/default/objects/Campaign/fields/Cost_Per_Booking__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Booking__c</fullName>
    <formula>IF( 
AND(HierarchyNumberOfWonOpportunities &lt;&gt; 0, NOT(ISNULL(HierarchyNumberOfWonOpportunities))), 
HierarchyActualCost / HierarchyNumberOfWonOpportunities , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Per Booking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>