force-app/main/default/objects/Campaign/fields/Cost_Per_Lead__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Lead__c</fullName>
    <formula>IF(AND( HierarchyNumberOfLeads &lt;&gt; 0, NOT(ISNULL(HierarchyNumberOfLeads))), HierarchyActualCost / HierarchyNumberOfLeads , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Per Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>