force-app/main/default/objects/Campaign/fields/Cost_Per_Response__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Response__c</fullName>
    <formula>IF(AND( HierarchyNumberOfResponses &lt;&gt; 0, NOT(ISNULL(HierarchyNumberOfResponses))), HierarchyActualCost / HierarchyNumberOfResponses , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Per Response in Hierarchy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>