force-app/main/default/objects/Campaign/fields/Digital_Maketing_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Digital_Maketing_Campaign_Code__c</fullName>
    <label>Digital Maketing Campaign Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>