force-app/main/default/objects/Campaign/fields/Is_CTI_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Is_CTI_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tag source from campaign?</label>
    <type>Checkbox</type>
</CustomField>