force-app/main/default/objects/Campaign/fields/Lead_Source_1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_1__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Hoardings</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>OOH</fullName>
            </value>
            <value>
                <fullName>Leaflets</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>