force-app/main/default/objects/Campaign/fields/Lead_Source_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_2__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Source_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>99 Acres</fullName>
            </value>
            <value>
                <fullName>Magic Bricks</fullName>
            </value>
            <value>
                <fullName>Common Floor</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Google Display</fullName>
            </value>
            <value>
                <fullName>TOI</fullName>
            </value>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>ABP</fullName>
            </value>
            <value>
                <fullName>Wadala</fullName>
            </value>
            <value>
                <fullName>Kharghar</fullName>
            </value>
            <value>
                <fullName>PropExpo</fullName>
            </value>
            <value>
                <fullName>Property Mela</fullName>
            </value>
            <value>
                <fullName>Small Brochure</fullName>
            </value>
            <value>
                <fullName>Big Brochure</fullName>
            </value>
            <value>
                <fullName>BQS</fullName>
            </value>
            <value>
                <fullName>Mirror</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
            <value>
                <fullName>Red FM</fullName>
            </value>
            <value>
                <fullName>Magic FM</fullName>
            </value>
            <value>
                <fullName>Fever FM</fullName>
            </value>
            <value>
                <fullName>Nasha</fullName>
            </value>
            <value>
                <fullName>Mirchi</fullName>
            </value>
            <value>
                <fullName>Ishq</fullName>
            </value>
            <value>
                <fullName>Hoardings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>