force-app/main/default/objects/Campaign/fields/Primary_Project__c.field-meta.xml
<CustomField>
    <fullName>Primary_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>