force-app/main/default/objects/Campaign/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <label>Campaign Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>99 acres</fullName>
            </value>
            <value>
                <fullName>Magic Bricks</fullName>
            </value>
            <value>
                <fullName>Common Floor</fullName>
            </value>
            <value>
                <fullName>Company Website</fullName>
            </value>
            <value>
                <fullName>Different Areas</fullName>
            </value>
            <value>
                <fullName>Newspaper Names</fullName>
            </value>
            <value>
                <fullName>Client Reference</fullName>
            </value>
            <value>
                <fullName>Employee Reference</fullName>
            </value>
            <value>
                <fullName>Exhibition Names</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>TOI</fullName>
            </value>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>ABP</fullName>
            </value>
            <value>
                <fullName>Wadala</fullName>
            </value>
            <value>
                <fullName>Kharghar</fullName>
            </value>
            <value>
                <fullName>PropExpo</fullName>
            </value>
            <value>
                <fullName>Property Mela</fullName>
            </value>
            <value>
                <fullName>Small Brochure</fullName>
            </value>
            <value>
                <fullName>Big Brochure</fullName>
            </value>
            <value>
                <fullName>BQS</fullName>
            </value>
            <value>
                <fullName>Mirror</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
            <value>
                <fullName>Red FM</fullName>
            </value>
            <value>
                <fullName>Magic FM</fullName>
            </value>
            <value>
                <fullName>Fever FM</fullName>
            </value>
            <value>
                <fullName>Nasha</fullName>
            </value>
            <value>
                <fullName>Mirchi</fullName>
            </value>
            <value>
                <fullName>Ishq</fullName>
            </value>
            <value>
                <fullName>Hoardings</fullName>
            </value>
            <value>
                <fullName>Polyvalent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>