force-app/main/default/objects/Campaign/recordTypes/Child_Campaigns.recordType-meta.xml
<RecordType>
    <fullName>Child_Campaigns</fullName>
    <active>true</active>
    <label>Child Campaigns</label>
</RecordType>