force-app/main/default/objects/Campaign/recordTypes/Parent_Campaigns.recordType-meta.xml
<RecordType>
    <fullName>Parent_Campaigns</fullName>
    <active>true</active>
    <label>Parent Campaigns</label>
</RecordType>