force-app/main/default/objects/Campaign/validationRules/ValidationFor_Budgeted_Cost_in_Campaign.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationFor_Budgeted_Cost_in_Campaign</fullName>
    <active>true</active>
    <errorConditionFormula>Parent.Budgeted_Amount__c &lt; BudgetedCost</errorConditionFormula>
    <errorDisplayField>BudgetedCost</errorDisplayField>
    <errorMessage>Budgeted Cost Exosted</errorMessage>
</ValidationRule>