force-app/main/default/objects/Campaign/listViews/All_Active_Hinjewadi_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Active_Hinjewadi_Campaigns</fullName>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>Sub_Source__c</columns>
    <columns>Digital_Maketing_Campaign_Code__c</columns>
    <columns>Is_CTI_Campaign__c</columns>
    <columns>Primary_Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Primary_Project__c</field>
        <operation>contains</operation>
        <value>Joyville Hinjewadi</value>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Active Hinjewadi Campaigns</label>
</ListView>