force-app/main/default/objects/Campaign/listViews/AllActiveCampaignsWeb.listView-meta.xml
<ListView>
    <fullName>AllActiveCampaignsWeb</fullName>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>Sub_Source__c</columns>
    <columns>Digital_Maketing_Campaign_Code__c</columns>
    <columns>Is_CTI_Campaign__c</columns>
    <columns>Primary_Project__c</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Website</value>
    </filters>
    <label>All Active Campaigns-Website</label>
</ListView>